# popy_tinkle

./: .gitignore  Building_popy.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THREAT_MODEL.md  docs.html  package-lock.json  package.json  plan.md  tsconfig.json  vite.config.ts  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  fuzz.yml  release.yml
developer_docs/: docs.html
docs/: ARCHITECTURE.md  PRIVACY.md
popyd/: .gitignore  CMakeLists.txt  README.md
popyd/mcp/: server.py
popyd/src/: main_popy.cpp  main_popy_render.cpp  main_popyd.cpp
popyd/src/cli/: commands.cpp  commands.h
popyd/src/core/: attest.cpp  attest.h  config.cpp  config.h  hash.cpp  hash.h  hmac.cpp  hmac.h  keyring.cpp  keyring.h  log.cpp  log.h  mime.cpp  mime.h  naming.cpp  naming.h  paths.cpp  paths.h  rand.cpp  rand.h  safe_fs.cpp  safe_fs.h  sidecar.cpp  sidecar.h  textsafe.cpp  textsafe.h  uuid.cpp  uuid.h
popyd/src/ipc/: status.cpp  status.h
popyd/src/net/: fetch.cpp  fetch.h
popyd/src/render/: image.cpp  image.h  markdown.cpp  markdown.h  pdf.cpp  pdf.h  sandbox.cpp  sandbox.h
popyd/src/store/: quarantine.cpp  quarantine.h  quarantine_file.cpp  quarantine_file.h
popyd/src/watch/: watcher.h  watcher_fsevents.cpp  watcher_inotify.cpp
popyd/tests/: CMakeLists.txt  test_attest.cpp  test_config.cpp  test_e2e_fetch.cpp  test_hash.cpp  test_hmac.cpp  test_keyring.cpp  test_main.cpp  test_main.h  test_naming.cpp  test_quarantine_file.cpp  test_release.cpp  test_repair.cpp  test_safe_fs.cpp  test_sidecar.cpp  test_textsafe.cpp  test_verified_read.cpp  test_watcher.cpp
popyd/tests/fuzz/: fuzz_attest.cpp  fuzz_mime.cpp  fuzz_sidecar.cpp
src/: manifest.json  ui.css
src/background/: background.ts
src/dashboard/: dashboard.css  dashboard.html  dashboard.ts  settings.ts
src/lib/: ui.ts
src/lib/dnr/: rules.ts
src/lib/interceptor/: classifier.ts  hostMatch.ts  webRequestCache.ts
src/lib/metadata/: expire.ts  prefs.ts  store.ts
src/lib/opfs/: fs.ts
src/lib/types/: index.ts
src/lib/validator/: validate.ts
src/offscreen/: offscreen.html  offscreen.ts
src/onboarding/: onboarding.css  onboarding.html  onboarding.ts
src/popup/: popup.css  popup.html  popup.ts  release.ts
tests/: classifier.test.ts  expire.test.ts  hostMatch.test.ts  opfs.test.ts  prefs.test.ts  setup.ts  validate.test.ts
